Task 6: add and use ModelMapper depenedncy with ServerResponse class