@@ -1,9 +1,12 @@
 package com.server.status.tacker.service.impl;
 
+import com.server.status.tacker.converter.ServerRequestConverter;
 import com.server.status.tacker.entity.Server;
 import com.server.status.tacker.enumeration.Status;
+import com.server.status.tacker.payload.response.ServerResponse;
 import com.server.status.tacker.repository.ServerRepository;
 import com.server.status.tacker.service.IServerService;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -29,64 +32,87 @@ import java.util.stream.Collectors;
 @Service
 public class ServerServiceImpl implements IServerService {
     private final ServerRepository serverRepository;
+    private final ServerRequestConverter serverRequestConverter;
 
     @Autowired
-    public ServerServiceImpl(ServerRepository serverRepository) {
+    public ServerServiceImpl(ServerRepository serverRepository, ServerRequestConverter serverRequestConverter) {
         this.serverRepository = serverRepository;
+        this.serverRequestConverter = serverRequestConverter;
     }
 
     @Override
-    public Server ping(String ipAddress) throws IOException {
-        Server server = findByIpAddress(ipAddress);
+    public ServerResponse ping(String ipAddress) throws IOException {
+        Server server = serverRepository.findByIpAddress(ipAddress);
         InetAddress address = InetAddress.getByName(ipAddress);
         server.setStatus(address.isReachable(10000) ? Status.SERVER_UP : Status.SERVER_DOWN);
         server.setLastCheck(LocalDateTime.now());
-        return serverRepository.save(server);
+        Server savedServer = serverRepository.save(server);
+        ServerResponse serverResponse = serverRequestConverter.convertServerToServerResponse(savedServer);
+        return serverResponse;
     }
 
     @Override
-    public List<Server> servers() {
-        return serverRepository.findAll();
+    public List<ServerResponse> servers() {
+        List<Server> servers = serverRepository.findAll();
+        return servers
+                .stream()
+                .map(serverRequestConverter::convertServerToServerResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Collection<Server> serversByLimit(int limit) {
-        return serverRepository.findAll().stream().limit(limit).collect(Collectors.toList());
+    public Collection<ServerResponse> serversByLimit(int limit) {
+        List<Server> servers = serverRepository.findAll().stream().limit(limit).toList();
+        return servers
+                .stream()
+                .map(serverRequestConverter::convertServerToServerResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Server findByUid(String uid) {
+    public ServerResponse findByUid(String uid) {
         Server server = serverRepository.findByUid(uid);
         if (Objects.isNull(server)) {
             throw new IllegalArgumentException("Server not found by the provided uid: " + uid);
         }
-        return server;
+        ServerResponse serverResponse = serverRequestConverter.convertServerToServerResponse(server);
+        return serverResponse;
     }
 
     @Override
-    public Server findByIpAddress(String ipAddress) {
+    public ServerResponse findByIpAddress(String ipAddress) {
         Server server = serverRepository.findByIpAddress(ipAddress);
         if (Objects.isNull(server)) {
             throw new IllegalArgumentException("Server not found by the provided IP Address: " + ipAddress);
         }
-        return server;
+        ServerResponse serverResponse = serverRequestConverter.convertServerToServerResponse(server);
+
+        return serverResponse;
     }
 
     @Override
-    public Server save(Server server) {
-        return serverRepository.save(server);
+    public ServerResponse save(Server server) {
+        Server savedServer = serverRepository.save(server);
+        ServerResponse serverResponse = serverRequestConverter.convertServerToServerResponse(savedServer);
+        return serverResponse;
     }
 
     @Override
-    public Server update(String uid, Server server) {
-        Server getServer = findByUid(uid);
+    public ServerResponse update(String uid, Server server) {
+        Server getServer = serverRepository.findByUid(uid);
+        if (Objects.isNull(getServer)) {
+            throw new IllegalArgumentException("Server not found by the provided uid: " + uid);
+        }
         getServer.setName(server.getName());
         getServer.setIpAddress(server.getIpAddress());
         getServer.setMemory(server.getMemory());
         getServer.setType(server.getType());
         getServer.setIcon(server.getIcon());
         getServer.setStatus(server.getStatus());
-        return serverRepository.save(getServer);
+
+        Server updatedServer = serverRepository.save(getServer);
+        ServerResponse serverResponse = serverRequestConverter.convertServerToServerResponse(updatedServer);
+        return serverResponse;
     }
 
     @Override
